<resources>
    <string name="app_name">Euphoria</string>
    <string name="splash_image">SplashImage</string>
    <string name="design">design</string>
    <string name="emailHint">E-MAIL</string>
    <string name="passwordHint">PASSWORD</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="signIn">Sign In</string>
    <string name="terms">By logging in, you confirm you have read and agree to our <b>Privacy Policy</b>.</string>
    <string name="character">character</string>
    <string name="accessory">accessory</string>
    <string name="logo_circle">logoCircle</string>
    <string name="previous">previous</string>
    <string name="next">next</string>
    <string name="specify">Please Specify</string>
    <string name="other">Other</string>
    <string name="logo">logo</string>
    <string name="camera">camera</string>
    <string name="disclosureIndicator">disclosureIndicator</string>
    <string name="name">Name</string>
    <string name="organ">Organ</string>
    <string name="channels">Channels</string>
    <string name="effect">Effect</string>
    <string name="flavour">Flavour</string>
    <string name="nature">Nature</string>
    <string name="element">Element</string>
    <string name="gridBg">gridBg</string>
    <string name="play">play</string>
    <string name="sessions">my Sessions</string>
    <string name="plus">plus</string>
    <string name="save">Save</string>
    <string name="timer">Timer Setup</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="sessionHint">(Name) Session</string>
    <string name="ok">OK</string>
    <string name="done">Done</string>
    <string name="sound">Sound</string>
    <string name="list">List</string>
    <string name="start">Start</string>
    <string name="session">Session</string>
    <string name="zeroTime">00:00</string>
    <string name="countdown">Timer Countdown</string>
    <string name="time">hour\u0020\u0020\u0020\u0020\u0020\u0020min\u0020\u0020\u0020\u0020\u0020\u0020sec</string>
    <string name="zerohms">00:00:00</string>
    <string name="stop">Stop</string>
    <string name="delete">delete</string>
    <string name="photo">photo</string>
    <string name="signout">Signout</string>
    <string name="account">my Account</string>
    <string name="profile">Profile</string>
    <string name="i_agree">I AGREE</string>
    <string name="confirm">CONFIRM</string>
    <string name="treatment_description">Treatment Description</string>
    <string name="therapist">Therapist</string>
    <string name="price">Price</string>
    <string name="discount_percentage">Discount %</string>
    <string name="discount">Discount</string>
    <string name="date">Date</string>
    <string name="duration">Duration</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="room">Room</string>
    <string name="room_number">Room #</string>
    <string name="product_description">Product Description</string>
</resources>
