<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        tools:context=".Activities.MainActivity">

    <ImageView
            android:id="@+id/splashIcon"
            android:contentDescription="@string/splash_image"
            android:src="@mipmap/icon"
            android:layout_width="188dp"
            android:layout_height="165dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="35dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
            android:id="@+id/designImage"
            android:contentDescription="@string/design"
            android:src="@mipmap/design"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/splashIcon"
            android:layout_marginTop="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    <RelativeLayout
            android:id="@+id/singInLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/designImage"
            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintBottom_toBottomOf="@id/designImage"
            app:layout_constraintStart_toStartOf="@id/designImage"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="@id/designImage">

        <EditText
                android:id="@+id/emailText"
                android:layout_width="240dp"
                android:layout_height="60dp"
                android:padding="14dp"
                android:textSize="17sp"
                android:textColor="@color/loginEditText"
                android:inputType="textEmailAddress"
                android:background="@drawable/rounded_edit_text"
                android:hint="@string/emailHint"
                android:autofillHints="@string/emailHint"/>

        <EditText
                android:id="@+id/passwordText"
                android:layout_width="240dp"
                android:layout_height="60dp"
                android:padding="14dp"
                android:textSize="17sp"
                android:textColor="@color/loginEditText"
                android:inputType="textPassword"
                android:hint="@string/passwordHint"
                android:layout_below="@id/emailText"
                android:background="@drawable/rounded_edit_text"
                android:layout_marginTop="15dp"
                android:autofillHints="@string/passwordHint"/>

        <Button
                android:id="@+id/forgotButton"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/forgotPassword"
                android:layout_below="@id/passwordText"
                android:layout_marginTop="15dp"
                android:textSize="16sp"
                android:typeface="sans"
                android:textStyle="italic"
                android:textAllCaps="false"
                android:background="@android:color/transparent"
                android:textColor="@color/forgotText"
                android:onClick="didClickForgotPassword"/>

        <Button
                android:id="@+id/signInButton"
                android:layout_width="240dp"
                android:layout_height="50dp"
                android:text="@string/signIn"
                android:layout_below="@id/forgotButton"
                android:layout_marginTop="15dp"
                android:textSize="16sp"
                android:typeface="sans"
                android:background="@mipmap/green_button"
                android:textColor="@android:color/white"
                android:onClick="didClickSignIn"/>

    </RelativeLayout>

    <TextView
            android:id="@+id/termsTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/terms"
            android:textAlignment="center"
            android:textStyle="italic"
            android:textSize="12sp"
            android:layout_marginBottom="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

</android.support.constraint.ConstraintLayout>