<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
            android:id="@+id/headerView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <ImageView
                android:id="@+id/logoImage"
                android:contentDescription="@string/logo"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="18dp"
                android:src="@mipmap/logo_circle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <TextView
                android:id="@+id/titleView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="13dp"
                android:layout_marginLeft="13dp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="13dp"
                android:layout_marginRight="13dp"
                android:textColor="@color/titleColor"
                android:gravity="start|center"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/sessions"
                app:layout_constraintStart_toEndOf="@id/logoImage"
                app:layout_constraintEnd_toStartOf="@id/plus"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageButton
                android:id="@+id/plus"
                android:contentDescription="@string/plus"
                android:layout_width="44dp"
                android:layout_height="40dp"
                android:layout_marginEnd="16dp"
                android:background="@android:color/transparent"
                android:onClick="didTapPlusButton"
                android:src="@mipmap/add"
                android:scaleType="center"
                app:layout_constraintEnd_toStartOf="@id/saveButton"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        <Button
                android:id="@+id/saveButton"
                android:text="@string/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:visibility="gone"
                android:background="@android:color/transparent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

    </android.support.constraint.ConstraintLayout>

    <android.support.v7.widget.RecyclerView
            android:id="@+id/recycleView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/sessionBg"
            android:scrollbars="vertical"
            android:dividerHeight="0.5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/headerView"
            app:layout_constraintBottom_toBottomOf="parent">
    </android.support.v7.widget.RecyclerView>

</android.support.constraint.ConstraintLayout>