<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
            android:id="@+id/headerView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/header_border"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <ImageView
                android:id="@+id/logoImage"
                android:contentDescription="@string/logo"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="18dp"
                android:src="@mipmap/logo_circle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <TextView
                android:id="@+id/titleView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="13dp"
                android:layout_marginLeft="13dp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="13dp"
                android:layout_marginRight="13dp"
                android:textColor="@color/titleColor"
                android:text="@string/account"
                android:gravity="start|center"
                android:textStyle="bold"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@id/logoImage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        <Button
                android:id="@+id/signoutButton"
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:layout_marginEnd="8dp"
                android:textSize="17sp"
                android:text="@string/signout"
                android:textAllCaps="false"
                android:textColor="@color/settings"
                android:background="@android:color/transparent"
                android:onClick="didClickSignOutButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
            android:id="@+id/maskView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/headerView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <ImageView
                android:id="@+id/maskImage"
                android:contentDescription="@string/design"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:src="@mipmap/flower_mask"
                app:layout_constraintDimensionRatio="375:253"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/borderView"/>

        <View
                android:id="@+id/borderView"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/settings"
                app:layout_constraintTop_toBottomOf="@+id/maskImage"/>
        
        <ImageButton
                android:id="@+id/profileButton"
                android:contentDescription="@string/profile"
                android:layout_width="155dp"
                android:layout_height="155dp"
                android:background="@android:color/transparent"
                android:src="@mipmap/placeholder"
                android:onClick="didTapProfileButton"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

    </android.support.constraint.ConstraintLayout>

    <android.support.v7.widget.RecyclerView
            android:id="@+id/recycleView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@android:color/white"
            android:scrollbars="vertical"
            android:dividerHeight="0.5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/maskView"
            app:layout_constraintBottom_toBottomOf="parent">
    </android.support.v7.widget.RecyclerView>

</android.support.constraint.ConstraintLayout>