<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
            android:id="@+id/headerView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/header_border"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <ImageView
                android:id="@+id/logoImage"
                android:contentDescription="@string/logo"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="18dp"
                android:src="@mipmap/logo_circle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <TextView
                android:id="@+id/titleTextView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="13dp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="8dp"
                android:textColor="@color/titleColor"
                android:gravity="start|center"
                android:textStyle="bold"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@id/logoImage"
                app:layout_constraintEnd_toStartOf="@id/emailButton"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageButton
                android:id="@+id/emailButton"
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:layout_marginEnd="8dp"
                android:background="@android:color/transparent"
                android:onClick="didClickEmailButton"
                android:src="@mipmap/envelope_blue"
                android:scaleType="center"
                app:layout_constraintEnd_toStartOf="@id/delete"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageButton
                android:id="@+id/delete"
                android:contentDescription="@string/delete"
                android:layout_width="44dp"
                android:layout_height="40dp"
                android:layout_marginEnd="16dp"
                android:onClick="didClickDelete"
                android:background="@android:color/transparent"
                android:src="@mipmap/delete"
                android:scaleType="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

    </android.support.constraint.ConstraintLayout>

    <ImageView
            android:id="@+id/photoView"
            android:contentDescription="@string/photo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            app:layout_constraintTop_toBottomOf="@+id/headerView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/cameraButton"/>

    <ImageButton
            android:id="@+id/cameraButton"
            android:contentDescription="@string/camera"
            android:layout_width="76dp"
            android:layout_height="76dp"
            android:background="@android:color/transparent"
            android:layout_marginBottom="16dp"
            android:onClick="didClickCamera"
            android:src="@mipmap/photo"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>