<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/headerView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <ImageView
                android:id="@+id/logoImage"
                android:contentDescription="@string/logo"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="18dp"
                android:layout_marginLeft="18dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <TextView
                android:id="@+id/titleView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="13dp"
                android:layout_marginLeft="13dp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="13dp"
                android:layout_marginRight="13dp"
                android:textColor="@color/titleColor"
                android:gravity="start|center"
                android:textStyle="bold"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@id/logoImage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

    </android.support.constraint.ConstraintLayout>

    <TextView
            android:id="@+id/nameTitleTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="18sp"
            android:singleLine="false"
            android:textStyle="bold"
            android:text="@string/name"
            android:textColor="@color/defaultTextColor"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@id/headerView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:id="@+id/nameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="16sp"
            android:singleLine="false"
            android:textColor="@color/defaultTextColor"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@id/nameTitleTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:id="@+id/organTitleTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="18sp"
            android:singleLine="false"
            android:textStyle="bold"
            android:text="@string/organ"
            android:textColor="@color/defaultTextColor"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@id/nameTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:id="@+id/organTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="16sp"
            android:singleLine="false"
            android:textColor="@color/defaultTextColor"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@id/organTitleTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/channelsTitleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="18sp"
        android:singleLine="false"
        android:textStyle="bold"
        android:text="@string/channels"
        android:textColor="@color/defaultTextColor"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@id/organTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:id="@+id/channelsTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="16sp"
            android:singleLine="false"
            android:textColor="@color/defaultTextColor"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@id/channelsTitleTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:id="@+id/effectTitleTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="18sp"
            android:singleLine="false"
            android:textStyle="bold"
            android:text="@string/effect"
            android:textColor="@color/defaultTextColor"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@id/channelsTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:id="@+id/effectTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="16sp"
            android:singleLine="false"
            android:textColor="@color/defaultTextColor"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@id/effectTitleTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
            android:id="@+id/flavourLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@id/effectTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal">

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".50"
                android:textSize="18sp"
                android:singleLine="false"
                android:textStyle="bold"
                android:text="@string/flavour"
                android:textColor="@color/defaultTextColor"
                android:gravity="center_vertical"/>

        <TextView
                android:id="@+id/flavourTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".50"
                android:textSize="16sp"
                android:singleLine="false"
                android:textColor="@color/defaultTextColor"
                android:gravity="center_vertical"/>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/natureLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@id/flavourLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal">

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".50"
                android:textSize="18sp"
                android:singleLine="false"
                android:textStyle="bold"
                android:text="@string/nature"
                android:textColor="@color/defaultTextColor"
                android:gravity="center_vertical"/>

        <TextView
                android:id="@+id/natureTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".50"
                android:textSize="16sp"
                android:singleLine="false"
                android:textColor="@color/defaultTextColor"
                android:gravity="center_vertical"/>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/elementLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@id/natureLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal">

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".50"
                android:textSize="18sp"
                android:singleLine="false"
                android:textStyle="bold"
                android:text="@string/element"
                android:textColor="@color/defaultTextColor"
                android:gravity="center_vertical"/>

        <TextView
                android:id="@+id/elementTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".50"
                android:textSize="16sp"
                android:singleLine="false"
                android:textColor="@color/defaultTextColor"
                android:gravity="center_vertical"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>